<resources>
    <string name="app_name">StartTripV1</string>
    <string name="str_welcome">Bienvenidos a</string>
    <string name="str_travel">Un lugar en el que puedes hacer tu reservacion para tu viaje...</string>
    <string name="start">Vamos a Empezar...</string>
    <string name="button">Inicia Sesion con Google</string>
    <string name="inicia_sesion_con_correo">Inicia Sesion con correo</string>
    <string name="correo">continua con google</string>
    <string name="facebook">continua con facebook</string>
    <string name="login">inicia sesion</string>
    <string name="cuenta">Ya tienes una Cuenta?</string>
    <string name="example">Ex: abcd@example.com</string>
    <string name="examplepassword">Contraseña</string>
    <string name="date">"fecha "</string>
    <string name="registration">"Registrar "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>